# tankgame

./: .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  MIDI_PLAN.md  README.md  TILES_PLAN.md  TODO.txt  flake.nix
.github/workflows/: ci.yml  deploy.yml
assets/campaigns/: main.campaign
assets/maps/: abyss_gauntlet.map  adrian_arena.map  blend_test.map  canyon_crossing.map  dawn_waterway.map  day_arena.map  deep_sea.map  fjord.map  fjord_jump.map  frozen_peaks.map  golden_hour_assault.map  lava_crossing.map  martin_arena.map  martin_arena_2.map  midnight_maze.map  night_arena.map  storm_citadel.map  sunset_fortress.map  test_arena.map  test_quadrants.map  test_scale.map  toxic_dawn.map  two_levels.map  volcanic_ridge.map
assets/music/: march.musicset  march_bass.mid  march_drums.mid  march_melody.mid
assets/music/march/: bass.mid  drums.mid  melody.mid  victory.mid
assets/tiles/: carpet_beige.tile  carpet_gray.tile  carpet_green.tile  cobble.tile  ground.toml  ice.toml  mud.toml  mud_churned.tile  mud_dry.tile  mud_wet.tile  slime.tile  stone.toml  test_grid.tile  test_quadrants.tile  water_caustic.tile  wood_oak_amber.tile  wood_oak_brown.tile  wood_oak_veneer.tile  wood_pine_light.tile  wood_rustic_dark.tile  wood_walnut.tile
docs/: debug-script.md  map-format.md
shaders/: entity.frag  ground.frag  ground.vert  laser.frag  laser.vert  lightmap.frag  lightmap.vert  particle.frag  particle.vert  tankgame.glsl  test.frag  test.vert  textured.frag  textured.vert  track.frag  track.vert  wall.frag  wall.vert  wall_debug.frag  water.frag  water.vert
shaders/programs/: background.glsl  cursor.glsl  debug_line.glsl  debug_line_3d.glsl  debug_text.glsl  editor_grid.glsl  entity.glsl  fog.glsl  glow_disc.glsl  ground.glsl  ground_blend.glsl  jump_pad.glsl  laser.glsl  lightmap.glsl  particle.glsl  sdf_text.glsl  spawn_indicator.glsl  test.glsl  textured.glsl  track.glsl  ui_quad.glsl  ui_textured.glsl  wall.glsl  water.glsl
shaders/sokol/: tankgame.glsl
spec/: 00-execution-plan.md  01-game-design.md  02-engine-foundation.md  03-gameplay-tech.md  04-network-protocol.md  05-tooling-and-debugging.md  06-music-system.md  progress.md
src/: main.c
src/core/: pz_debug_cmd.c  pz_debug_cmd.h  pz_debug_script.c  pz_debug_script.h  pz_ds.c  pz_ds.h  pz_log.c  pz_log.h  pz_math.c  pz_math.h  pz_mem.c  pz_mem.h  pz_platform.c  pz_platform.h  pz_sim.c  pz_sim.h  pz_sort.c  pz_sort.h  pz_str.c  pz_str.h
src/editor/: pz_editor.c  pz_editor.h  pz_editor_ui.c  pz_editor_ui.h
src/engine/: pz_audio.c  pz_audio.h  pz_camera.c  pz_camera.h  pz_cursor.c  pz_cursor.h  pz_debug_overlay.c  pz_debug_overlay.h  pz_font.c  pz_font.h  pz_music.c  pz_music.h  pz_sfx.c  pz_sfx.h  pz_sokol.c  pz_sokol.m
src/engine/render/: pz_render_backend.h  pz_render_gl33.c  pz_render_null.c  pz_render_sokol.c  pz_renderer.c  pz_renderer.h  pz_sokol_shaders.h  pz_texture.c  pz_texture.h
src/game/: pz_ai.c  pz_ai.h  pz_background.c  pz_background.h  pz_barrier.c  pz_barrier.h  pz_barrier_placer.c  pz_barrier_placer.h  pz_campaign.c  pz_campaign.h  pz_collision.c  pz_collision.h  pz_game_music.c  pz_game_music.h  pz_game_sfx.c  pz_game_sfx.h  pz_lighting.c  pz_lighting.h  pz_map.c  pz_map.h  pz_map_render.c  pz_map_render.h  pz_mesh.c  pz_mesh.h  pz_mine.c  pz_mine.h  pz_musicset.c  pz_musicset.h  pz_particle.c  pz_particle.h  pz_pathfinding.c  pz_pathfinding.h  pz_powerup.c  pz_powerup.h  pz_projectile.c  pz_projectile.h  pz_spawn_indicator.c  pz_spawn_indicator.h  pz_tank.c  pz_tank.h  (+7 more)
src/net/: pz_net.c  pz_net.h  pz_net_signaling.c  pz_net_signaling.h  pz_net_signaling_wasm.cpp  pz_net_webrtc.c  pz_net_webrtc.h  pz_net_webrtc_wasm.cpp
tests/: CMakeLists.txt  test_collision.c  test_ds.c  test_framework.h  test_map.c  test_math.c  test_mem.c  test_net_offer.c  test_platform.c  test_renderer.c  test_sim.c  test_smoke.c  test_str.c  test_toxic_cloud.c
tools/: build_sokol_shaders.sh  generate_midi.py  generate_textures.py  make_deep_sea.py  make_tileable.py  make_tileable_cel.py  map_tool.py  run-parallel  strip_soundfont.py  validate_map.py
web/: Dockerfile  build.sh  shell.html
